[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mhl-suite"
version = "1.1.3"
description = "Simple MHL verification and sealing tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Luis Gómez Gutiérrez"}
]
dependencies = [
    "ascmhl>=1.2.0",
    "lxml>=4.9.0",
    "xxhash>=3.0.0",
]

# Format: command-name = "package.module:function"
[project.scripts]
simple-mhl = "mhl_suite.simple_mhl:main"
mhlver = "mhl_suite.mhlver:main"

# This ensures the source code and XSDs are bundled
[tool.hatch.build.targets.wheel]
packages = ["src/mhl_suite"]

# This ensures the source code and XSD are included in the source distribution
[tool.hatch.build.targets.sdist]
include = ["src/mhl_suite/"]

[tool.uv]
managed = true